[gd_scene load_steps=12 format=3 uid="uid://cqvjbb46kxen5"]

[ext_resource type="Texture2D" uid="uid://djj15kapmh08k" path="res://assets/Enemies/Plant/Idle (44x42).png" id="1_ckcyx"]
[ext_resource type="Script" uid="uid://dsg0dhpebrlda" path="res://Enemies/plantie.gd" id="1_gu5pc"]
[ext_resource type="Texture2D" uid="uid://cenpgsuok7toe" path="res://assets/Enemies/Plant/Attack (44x42).png" id="1_mwtwf"]
[ext_resource type="Texture2D" uid="uid://b2ijxe3jsas1b" path="res://assets/Enemies/Plant/Hit (44x42).png" id="4_lvlum"]

[sub_resource type="Animation" id="Animation_gu5pc"]
resource_name = "attack"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_mwtwf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_ifnr6"]
resource_name = "hit"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_lvlum")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_ckcyx"]
resource_name = "idle"
length = 1.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_ckcyx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gu5pc"]
_data = {
&"attack": SubResource("Animation_gu5pc"),
&"hit": SubResource("Animation_ifnr6"),
&"idle": SubResource("Animation_ckcyx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvlum"]
size = Vector2(24, 30)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lvlum"]
radius = 16.0
height = 138.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ifnr6"]
size = Vector2(24, 6)

[node name="plantie" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 3
script = ExtResource("1_gu5pc")

[node name="texture" type="Sprite2D" parent="."]
texture = ExtResource("1_mwtwf")
hframes = 8

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gu5pc")
}
autoplay = "idle"

[node name="spawnShoot" type="Marker2D" parent="."]
position = Vector2(-22, -2)

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(5, 5)
shape = SubResource("RectangleShape2D_lvlum")

[node name="playerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="collision" type="CollisionShape2D" parent="playerDetector"]
position = Vector2(3, 6)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_lvlum")

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(5, -13)
shape = SubResource("RectangleShape2D_ifnr6")

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="body_entered" from="playerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="playerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
